# cryptsetup-rs

./: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
blkid-rs/: Cargo.toml
blkid-rs/src/: lib.rs
examples/: luks_dump.rs
lib/blkid-rs/: Cargo.toml
lib/blkid-rs/src/: lib.rs
lib/libcryptsetup-sys/: Cargo.toml
libcryptsetup-sys/: Cargo.toml  build.rs  lib.rs
src/: api.rs  device.rs  global.rs  lib.rs  luks1.rs  luks2.rs  luks2_meta.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: tests.rs
