[package]
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "Rust wrapper around the libcryptsetup library, allowing manipulation of LUKS devices in Linux"
homepage = "https://gitlab.com/solidninja/cryptsetup-rs"
repository = "https://gitlab.com/solidninja/cryptsetup-rs"
license = "LGPL-3.0"
name = "cryptsetup-rs"
version = "0.3.0-beta1"
edition = "2018"

[badges]
gitlab = { repository = "solidninja/cryptsetup-rs" }

[dependencies]
base64 = "0.12"
base64-serde = "0.5"
either = "1.5"
errno = "0.2"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
serde_repr = "0.1"

[dependencies.blkid-rs]
path = "blkid-rs"
version = "0.3.0-beta1"

[dependencies.libcryptsetup-sys]
path = "libcryptsetup-sys"
version = "0.3.0-beta1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_with]
version = "1.4"

[dependencies.uuid]
features = ["v4"]
version = "0.8"

[dev-dependencies]
env_logger = "0.7"
expectest = "0.12"
tempfile = "3.1"

[lib]
name = "cryptsetup_rs"

[workspace]
members = ["blkid-rs", "libcryptsetup-sys", "systest"]