[package]
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "Rust wrapper around the libcryptsetup library, allowing manipulation of LUKS devices in Linux"
homepage = "https://gitlab.com/solidninja/cryptsetup-rs"
repository = "https://gitlab.com/solidninja/cryptsetup-rs"
license = "LGPL-3.0"
name = "cryptsetup-rs"
version = "0.3.0-beta3"
edition = "2018"

[badges]
gitlab = { repository = "solidninja/cryptsetup-rs" }

[dependencies]
base64 = "0.13.0"
base64-serde = "0.6.1"
either = "1.6.1"
errno = "0.2.7"
libc = "0.2.80"
log = "0.4.11"
serde_json = "1.0.59"
serde_repr = "0.1.6"
serde_with = "1.5.1"

[dependencies.blkid-rs]
path = "blkid-rs"
version = "0.3.0-beta2"

[dependencies.libcryptsetup-sys]
path = "libcryptsetup-sys"
version = "0.3.0-beta2"

[dependencies.serde]
features = ["derive"]
version = "1.0.117"

[dependencies.uuid]
features = ["v4"]
version = "0.8.1"

[dev-dependencies]
env_logger = "0.8.1"
expectest = "0.12.0"
tempfile = "3.1.0"

[lib]
name = "cryptsetup_rs"

[workspace]
members = ["blkid-rs", "libcryptsetup-sys", "systest"]
