[package]
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "Rust wrapper around the libcryptsetup library, allowing manipulation of LUKS devices in Linux"
homepage = "https://gitlab.com/solidninja/cryptsetup-rs"
repository = "https://gitlab.com/solidninja/cryptsetup-rs"
license = "LGPL-3.0"
name = "cryptsetup-rs"
version = "0.3.0"
edition = "2021"

[badges]
gitlab = { repository = "solidninja/cryptsetup-rs" }

[dependencies]
base64 = "0.13.0"
base64-serde = "0.6.1"
either = "1.8.0"
errno = "0.2.8"
libc = "0.2.132"
log = "0.4.17"
serde_json = "1.0.85"
serde_repr = "0.1.9"
serde_with = "1.14.0"

[dependencies.blkid-rs]
path = "lib/blkid-rs"
version = "0.3.0"

[dependencies.libcryptsetup-sys]
path = "lib/libcryptsetup-sys"
version = "0.3.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.144"

[dependencies.uuid]
features = ["v4"]
version = "1.1.2"

[dev-dependencies]
env_logger = "0.9.0"
expectest = "0.12.0"
tempfile = "3.3.0"

[lib]
name = "cryptsetup_rs"

[workspace]
members = [
    "lib/blkid-rs",
    "lib/libcryptsetup-sys",
    "systest",
]
