[package]
name = "blkid-rs"
version = "0.3.0-beta1"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "Rust implementation of blkid for LUKS volumes"
license = "LGPL-3.0"
homepage = "https://gitlab.com/solidninja/cryptsetup-rs"
edition = "2018"

[lib]
name = "blkid_rs"

[dependencies]
byteorder = "1.3"
either = "1.5"
uuid = "0.8"

[dev-dependencies]
env_logger = "0.7"
tempdir = "0.3"
