[package]
name = "systest"
version = "0.3.0-beta1"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
license = "LGPL-3.0"
description = "FFI bindings to the libcryptsetup library"
homepage = "https://gitlab.com/solidninja/cryptsetup-rs"
edition = "2018"

[dependencies]
libcryptsetup-sys = { path = "../libcryptsetup-sys" }
libc = "0.2"

[build-dependencies]
ctest = "0.2"
