[package]
name = "blkid-rs"
version = "0.3.0-beta3"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "Rust implementation of blkid for LUKS volumes"
license = "LGPL-3.0"
homepage = "https://gitlab.com/solidninja/cryptsetup-rs"
edition = "2021"

[lib]
name = "blkid_rs"

[dependencies]
byteorder = "1.4.3"
either = "1.8.0"
uuid = "1.1.2"

[dev-dependencies]
env_logger = "0.9.0"
tempdir = "0.3.7"
