[package]
name = "libcryptsetup-sys"
version = "0.3.0-beta3"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
license = "LGPL-3.0"
description = "FFI bindings to the libcryptsetup library"
homepage = "https://gitlab.com/solidninja/cryptsetup-rs"
edition = "2021"

links = "cryptsetup"
build = "build.rs"

[lib]
name = "libcryptsetup_sys"
path = "lib.rs"

[dependencies]
libc = "0.2.132"

[build-dependencies]
pkg-config = "0.3.25"

